--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Streamdata Gallery Risk Management
+title: Streamdata API Gallery - Risk Management
+description: A gallery of APIs to demonstrate what is possible when it comes to making data, content, and algorithms more real time, and event-driven as part of the API economy.
 url: risk-management.streamdata.gallery
 tag: Risk Management
 markdown: kramdown
